Created a table for entering data.

--- a/index.html
+++ b/index.html
@@ -7,5 +7,15 @@
   </head>
   <body>
     <h1>Statisticator</h1>
+    <table>
+      <tr>
+        <th>placeholder1</th>
+        <th>placeholder2</th>
+      </tr>
+      <tr>
+        <td>placeholder3</td>
+        <td>placeholder4</td>
+      </tr>
+    </table>
   </body>
 </html>
