--- a/index.html
+++ b/index.html
@@ -17,5 +17,8 @@
         <td>placeholder4</td>
       </tr>
     </table>
+
+    <script src="table.js"></script>
+    <script src="stats.js"></script>
   </body>
 </html>
