Added function to initialize the table.

--- a/index.html
+++ b/index.html
@@ -5,18 +5,9 @@
     <meta charset="utf-8">
     <title>Statisticator</title>
   </head>
-  <body>
+  <body onload="initTable()">
     <h1>Statisticator</h1>
-    <table>
-      <tr>
-        <th>placeholder1</th>
-        <th>placeholder2</th>
-      </tr>
-      <tr>
-        <td>placeholder3</td>
-        <td>placeholder4</td>
-      </tr>
-    </table>
+    <table></table>
 
     <script src="table.js"></script>
     <script src="stats.js"></script>
