--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Statisticator</title>
   </head>
-  <body onload="initTable()">
+  <body>
     <h1>Statisticator</h1>
     <table></table>
 
