Transferred table initialization from table.js to index.html.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,20 @@
   </head>
   <body>
     <h1>Statisticator</h1>
-    <table></table>
+    <table>
+      <thead>
+        <tr>
+          <th>[Insert Column Name]</th>
+          <td>+Column</td>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>[Insert Value]</td>
+          <td>+Row</td>
+        </tr>
+      </tbody>
+    </table>
 
     <script src="table.js"></script>
     <script src="stats.js"></script>
